# pulsprodaj

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  pytest.ini  setup.cfg
client/: __init__.py  client.py  model.py
tests/: conftest.py  test_get_post.py
