[tool.poetry]
name = "test_work"
version = "0.1.0"
description = ""
authors = ["KrivovDE <55reigen55@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
icecream = "^2.1.3"
pytest = "^7.1.3"
pre-commit = "^2.20.0"
factory-boy = "^3.2.1"
black = "^22.8.0"
flake8-isort = "^4.2.0"
flake8 = "^5.0.4"
pytest-sugar = "^0.9.5"
mypy = "^0.971"
pytest-cov = "^3.0.0"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
